fix: add spacing to header+

--- a/web/app/themes/juniper-theme/src/scss/_project.scss
+++ b/web/app/themes/juniper-theme/src/scss/_project.scss
@@ -1444,3 +1444,7 @@ h2.ls-cover-slider__main_heading {
 .WXqWMBPfEvSYcf9Pc7zg {
     margin-bottom: 0.3em;
 }
+
+header.header{
+    margin-bottom: 25px;
+}
